@@ -189,6 +189,11 @@ public class JabRef {
 			}
 		}
 		
+		// override used newline character with the one stored in the preferences
+		// The preferences return the system newline character sequence as default
+		Globals.NEWLINE = Globals.prefs.get(JabRefPreferences.NEWLINE);
+		Globals.NEWLINE_LENGTH = Globals.NEWLINE.length();
+		
 		openWindow(processArguments(args, true));
 	}
     
